--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
-# dioxus-fullstack = { git = "https://github.com/DioxusLabs/dioxus" }
-# dioxus-logger = { git = "https://github.com/DogeDark/dioxus-logger" }
-dioxus = "0.4.3"
-dioxus-fullstack = "0.4.3"
+async_once = {version = "0.2.6", optinal= true}
+dioxus = "0.4"
+dioxus-fullstack = "0.4"
 dioxus-logger = "0.4"
 lazy_static = "1.4.0"
 log = "0.4.20"
 serde = "1.0.193"
+surrealdb = { version = "1.1.1", optional = true }
 tokio = "1.35.1"
-uuid = { version = "1.6.1", features = ["v4"], optional = true }
 
 [features]
 default = []
-ssr = ["dioxus-fullstack/axum", "dep:uuid"]
+ssr = ["dioxus-fullstack/axum", "dep:surrealdb"]
 web = ["dioxus-fullstack/web"]
