--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async_once = {version = "0.2.6", optional= true}
+async_once = "0.2.6"
 dioxus = "0.4"
 dioxus-fullstack = "0.4"
 dioxus-logger = "0.4"
 lazy_static = "1.4.0"
 log = "0.4.20"
 serde = "1.0.193"
-surrealdb = {version = "1.1.1", optional = true}
+surrealdb = {version = "1.2", optional = true}
 tokio = "1.35.1"
 
 [features]
