Add latest tag to ECR image,
Pull SurrealDB ip / port from environment variable, terraform fixes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,9 @@ build:docker:
     - apk add --no-cache curl jq python3 py3-pip aws-cli
     - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
   script:
-    - docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$CI_COMMIT_SHA .
+    - docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$CI_COMMIT_SHA -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
     - docker push $ECR_REGISTRY/$ECR_REPOSITORY:$CI_COMMIT_SHA
+    - docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
 deploy:ecs:
   stage: deploy
