--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde = "1.0.193"
 surrealdb = {version = "2.0.4", optional = true}
 tokio = "1.35.1"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
 tracing-wasm = "0.2.1"
 
 [features]
